Improved controls for deployment service interaction. Increased max values for message sizes and related limits in the deployment service configuration. Recreated proxy classes for the deployment service.  #891 (Refactor GUI for plugin management)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3179 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -1,17 +1,60 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
   </configSections>
   <system.diagnostics>
+    <!-- for logging. Make sure the IIS application user has write access rights for the output directory -->
+    <!--sources>
+      <source name="System.ServiceModel.MessageLogging" switchValue="Warning, ActivityTracing">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelMessageLoggingListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel" switchValue="Warning, ActivityTracing"
+        propagateActivity="true">
+        <listeners>
+          <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+            <filter type="" />
+          </add>
+          <add name="ServiceModelTraceListener">
+            <filter type="" />
+          </add>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add initializeData="C:\inetpub\wwwroot\Deployment-3.3\web_messages.svclog"
+        type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+      <add initializeData="C:\inetpub\wwwroot\Deployment-3.3\web_tracelog.svclog"
+        type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+        name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
+        <filter type="" />
+      </add>
+    </sharedListeners-->
   </system.diagnostics>
   <connectionStrings>
     <remove name="LocalSqlServer" />
-    <add name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString"
-      connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI" />
+    <add connectionString="Server=SERVDEV;Database=HeuristicLab.Deployment;Integrated Security=SSPI" name="HeuristicLab.Services.Deployment.DataAccess.Properties.Settings.HeuristicLab_PluginStoreConnectionString" />
     <add name="MyLocalSQLServer" connectionString="Initial Catalog=aspnetdb;data source=localhost;Integrated Security=SSPI;" />
   </connectionStrings>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="100000000"/>
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <system.web>
     <compilation debug="false" />
+    <httpRuntime maxRequestLength="2097151" />
     <membership defaultProvider="MySqlMembershipProvider">
       <providers>
         <clear />
@@ -31,8 +74,8 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="DefaultWsHttpBinding" maxBufferPoolSize="10000000" maxReceivedMessageSize="1000000">
-          <readerQuotas maxDepth="1000" maxStringContentLength="16000" maxArrayLength="10000000" maxBytesPerRead="10000000" maxNameTableCharCount="16000" />
+        <binding name="DefaultWsHttpBinding" maxBufferPoolSize="10000000" maxReceivedMessageSize="200000000">
+          <readerQuotas maxDepth="1000" maxStringContentLength="16000" maxArrayLength="200000000" maxBytesPerRead="200000000" maxNameTableCharCount="16000" />
           <security mode="Message">
             <message clientCredentialType="UserName" />
           </security>
@@ -43,39 +86,57 @@
       </mexHttpBinding>
     </bindings>
     <diagnostics performanceCounters="Default">
-      <messageLogging logMalformedMessages="false" logMessagesAtTransportLevel="false" />
+      <!--<messageLogging logMalformedMessages="false" logMessagesAtTransportLevel="false" />-->
     </diagnostics>
     <services>
-      <service behaviorConfiguration="HeuristicLab.Services.Deployment.UpdateBehavior" name="HeuristicLab.Services.Deployment.Update">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.Deployment.IUpdate">
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+      <service behaviorConfiguration="HeuristicLab.Services.Deployment.UpdateBehavior"
+       name="HeuristicLab.Services.Deployment.Update">
+        <endpoint address="" behaviorConfiguration="SerializationBehavior"
+         binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+         contract="HeuristicLab.Services.Deployment.IUpdate" />
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
+         contract="IMetadataExchange" />
       </service>
-      <service behaviorConfiguration="HeuristicLab.Services.Deployment.AdminBehavior" name="HeuristicLab.Services.Deployment.Admin">
-        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.Deployment.IAdmin">
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+      <service behaviorConfiguration="HeuristicLab.Services.Deployment.AdminBehavior"
+       name="HeuristicLab.Services.Deployment.Admin">
+        <endpoint address="" behaviorConfiguration="SerializationBehavior"
+         binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+         contract="HeuristicLab.Services.Deployment.IAdmin" />
+        <endpoint address="mex" behaviorConfiguration="SerializationBehavior"
+         binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
+         contract="IMetadataExchange" />
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="SerializationBehavior">
+          <dataContractSerializer maxItemsInObjectGraph="1000000" />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="HeuristicLab.Services.Deployment.UpdateBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" />
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider" membershipProviderName="MySqlMembershipProvider" />
+            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine"
+             storeName="My" x509FindType="FindBySubjectName" />
+            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
+             membershipProviderName="MySqlMembershipProvider" />
           </serviceCredentials>
-          <serviceAuthorization principalPermissionMode="UseAspNetRoles" roleProviderName="MySqlRoleProvider" />
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
+           roleProviderName="MySqlRoleProvider" />
         </behavior>
         <behavior name="HeuristicLab.Services.Deployment.AdminBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" />
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider" membershipProviderName="MySqlMembershipProvider" />
+            <serviceCertificate findValue="servdev.heuristiclab.com" storeLocation="LocalMachine"
+             storeName="My" x509FindType="FindBySubjectName" />
+            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
+             membershipProviderName="MySqlMembershipProvider" />
           </serviceCredentials>
-          <serviceAuthorization principalPermissionMode="UseAspNetRoles" roleProviderName="MySqlRoleProvider" />
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
+           roleProviderName="MySqlRoleProvider" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
