Updated evolution strategy to include mutation strength adjustment (doh!) #932 Also added self adaptive crossover
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3183 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.EvolutionStrategy/3.3/HeuristicLab.Algorithms.EvolutionStrategy-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.EvolutionStrategy/3.3/HeuristicLab.Algorithms.EvolutionStrategy-3.3.csproj
@@ -83,7 +83,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EvolutionStrategy.cs" />
     <Compile Include="EvolutionStrategyMainLoop.cs" />
-    <Compile Include="WithoutRepeatingRandomSelector.cs" />
+    <Compile Include="SelfAdaptiveCrossover.cs" />
+    <Compile Include="StrategyVectorManipulator.cs" />
+    <Compile Include="WithoutRepeatingBatchedRandomSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
