--- a/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TestFunctions/3.3/HeuristicLab.Problems.TestFunctions-3.3.csproj
@@ -94,10 +94,27 @@
     <Compile Include="Evaluators\SchwefelEvaluator.cs" />
     <Compile Include="Evaluators\SingleObjectiveTestFunctionProblemEvaluator.cs" />
     <Compile Include="Evaluators\SphereEvaluator.cs" />
+    <Compile Include="Evaluators\SumSquaresEvaluator.cs" />
     <Compile Include="Evaluators\ZakharovEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsTestFunctionsPlugin.cs" />
+    <Compile Include="Interfaces\ISingleObjectiveTestFunctionAdditiveMoveEvaluator.cs" />
+    <Compile Include="Interfaces\ISingleObjectiveTestFunctionMoveEvaluator.cs" />
     <Compile Include="Interfaces\ISingleObjectiveTestFunctionProblemEvaluator.cs" />
     <Compile Include="Interfaces\ISingleObjectiveTestFunctionProblemSolutionsVisualizer.cs" />
+    <Compile Include="MoveEvaluators\AckleyAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\BealeAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\BoothAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\ZakharovAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\SumSquaresAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\SphereAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\SchwefelAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\MatyasAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\RosenbrockAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\RastriginAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\LevyAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\GriewangkAdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\AdditiveMoveEvaluator.cs" />
+    <Compile Include="MoveEvaluators\RealVectorAdditiveMoveWrapper.cs" />
     <Compile Include="SingleObjectiveTestFunctionProblem.cs" />
     <None Include="HeuristicLab.snk" />
     <None Include="HeuristicLabProblemsTestFunctionsPlugin.cs.frame" />
