--- a/sources/HeuristicLab.Algorithms.GeneticAlgorithm.Views/3.3/HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.GeneticAlgorithm.Views/3.3/HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{35A42EE0-A896-4D7A-A99F-8ED9E925F320}</ProjectGuid>
+    <ProjectGuid>{3F090389-DC7C-4F22-8B11-1977C8032D94}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Algorithms.SGA.Views</RootNamespace>
-    <AssemblyName>HeuristicLab.Algorithms.SGA.Views-3.3</AssemblyName>
+    <RootNamespace>HeuristicLab.Algorithms.GeneticAlgorithm.Views</RootNamespace>
+    <AssemblyName>HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -31,7 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HeuristicLab.Algorithms.SGA.Views-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,7 +44,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x64\Release\HeuristicLab.Algorithms.SGA.Views-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -61,7 +61,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x86\Release\HeuristicLab.Algorithms.SGA.Views-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -84,7 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeuristicLabAlgorithmsSGAViewsPlugin.cs" />
+    <Compile Include="HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs" />
     <Compile Include="SGAView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -94,9 +94,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\HeuristicLab.Algorithms.SGA\3.3\HeuristicLab.Algorithms.SGA-3.3.csproj">
-      <Project>{4C3305C4-E440-4EAD-B218-68D77AE51543}</Project>
-      <Name>HeuristicLab.Algorithms.SGA-3.3</Name>
+    <ProjectReference Include="..\..\HeuristicLab.Algorithms.GeneticAlgorithm\3.3\HeuristicLab.Algorithms.GeneticAlgorithm-3.3.csproj">
+      <Project>{A51DA44F-CB35-4F6F-99F5-2A2E904AB93B}</Project>
+      <Name>HeuristicLab.Algorithms.GeneticAlgorithm-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.Core.Views\3.3\HeuristicLab.Core.Views-3.3.csproj">
       <Project>{E226881D-315F-423D-B419-A766FE0D8685}</Project>
@@ -129,7 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
-    <None Include="HeuristicLabAlgorithmsSGAViewsPlugin.cs.frame" />
+    <None Include="HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs.frame" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -147,6 +147,6 @@ set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd
-SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsSGAViewsPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsSGAViewsPlugin.cs"</PreBuildEvent>
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
