--- a/sources/HeuristicLab.Algorithms.GeneticAlgorithm/3.3/HeuristicLab.Algorithms.GeneticAlgorithm-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.GeneticAlgorithm/3.3/HeuristicLab.Algorithms.GeneticAlgorithm-3.3.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{4C3305C4-E440-4EAD-B218-68D77AE51543}</ProjectGuid>
+    <ProjectGuid>{A51DA44F-CB35-4F6F-99F5-2A2E904AB93B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Algorithms.SGA</RootNamespace>
-    <AssemblyName>HeuristicLab.Algorithms.SGA-3.3</AssemblyName>
+    <RootNamespace>HeuristicLab.Algorithms.GeneticAlgorithm</RootNamespace>
+    <AssemblyName>HeuristicLab.Algorithms.GeneticAlgorithm-3.3</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HeuristicLab.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
@@ -36,7 +36,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HeuristicLab.Algorithms.SGA-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\HeuristicLab.Algorithms.GeneticAlgorithm-3.3.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -49,7 +49,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x86\Release\HeuristicLab.Algorithms.SGA-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\HeuristicLab.Algorithms.GeneticAlgorithm-3.3.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -66,7 +66,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x64' ">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\x64\Release\HeuristicLab.Algorithms.SGA-3.3.xml</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\HeuristicLab.Algorithms.GeneticAlgorithm-3.3.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -81,7 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeuristicLabAlgorithmsSGAPlugin.cs" />
+    <Compile Include="HeuristicLabAlgorithmsGeneticAlgorithmPlugin.cs" />
     <Compile Include="SGA.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -140,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
-    <None Include="HeuristicLabAlgorithmsSGAPlugin.cs.frame" />
+    <None Include="HeuristicLabAlgorithmsGeneticAlgorithmPlugin.cs.frame" />
     <None Include="Properties\AssemblyInfo.frame" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
@@ -158,6 +158,6 @@ set SolutionDir=$(SolutionDir)
 set Outdir=$(Outdir)
 
 call PreBuildEvent.cmd
-SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsSGAPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsSGAPlugin.cs"</PreBuildEvent>
+SubWCRev "%25ProjectDir%25\" "%25ProjectDir%25\HeuristicLabAlgorithmsGeneticAlgorithmPlugin.cs.frame" "%25ProjectDir%25\HeuristicLabAlgorithmsGeneticAlgorithmPlugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
