Added normal distributed additive move generator #890
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3197 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVectorEncoding/3.3/HeuristicLab.Encodings.RealVectorEncoding-3.3.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Moves\AdditiveMoveTabuAttribute.cs" />
     <Compile Include="Moves\AdditiveTabuMoveEvaluator.cs" />
     <Compile Include="Moves\AdditiveTabuMoveMaker.cs" />
+    <Compile Include="Moves\Polynomial\StochasticNormalMultiMoveGenerator.cs" />
     <Compile Include="Moves\Polynomial\StochasticPolynomialMultiMoveGenerator.cs" />
     <Compile Include="Moves\AdditiveMoveMaker.cs" />
     <Compile Include="Moves\AdditiveMove.cs" />
