Renamed files/classes (#945).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3198 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.GeneticAlgorithm.Views/3.3/HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.GeneticAlgorithm.Views/3.3/HeuristicLab.Algorithms.GeneticAlgorithm.Views-3.3.csproj
@@ -84,13 +84,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs" />
-    <Compile Include="SGAView.cs">
+    <Compile Include="GeneticAlgorithmView.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SGAView.Designer.cs">
-      <DependentUpon>SGAView.cs</DependentUpon>
+    <Compile Include="GeneticAlgorithmView.Designer.cs">
+      <DependentUpon>GeneticAlgorithmView.cs</DependentUpon>
     </Compile>
+    <Compile Include="HeuristicLabAlgorithmsGeneticAlgorithmViewsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
