Fixed and updated !GeneticAlgorithmPerformanceTest (#945).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3199 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.GeneticAlgorithm/3.3/Tests/HeuristicLab.Algorithms.GeneticAlgorithm-3.3.Tests.csproj
+++ b/sources/HeuristicLab.Algorithms.GeneticAlgorithm/3.3/Tests/HeuristicLab.Algorithms.GeneticAlgorithm-3.3.Tests.csproj
@@ -155,7 +155,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="GeneticAlgorithm.hl" />
+    <None Include="GeneticAlgorithm.hl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
