--- a/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
@@ -13,21 +13,19 @@
                         maxBytesPerRead="4096" maxNameTableCharCount="16384" />
                     <reliableSession ordered="true" inactivityTimeout="00:10:00"
                         enabled="false" />
-                    <security mode="Transport">
-                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
+                    <security mode="None">
+                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign">
+                            <extendedProtectionPolicy policyEnforcement="Never" />
+                        </transport>
                         <message clientCredentialType="Windows" />
                     </security>
                 </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.0.2.15:9000/HiveServer/ClientCommunicator"
+            <endpoint address="net.tcp://10.0.0.52:9000/HiveServer/ClientCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientFacade"
-                contract="ServerService.IClientFacade" name="NetTcpBinding_IClientFacade">
-                <identity>
-                    <userPrincipalName value="STEFAN-4710DBDB\Stefan" />
-                </identity>
-            </endpoint>
+                contract="ServerService.IClientFacade" name="NetTcpBinding_IClientFacade" />
         </client>
     </system.serviceModel>
 </configuration>
