--- a/sources/HeuristicLab.Hive.Client.Core/3.2/HeuristicLab.Hive.Client.Core-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Client.Core/3.2/HeuristicLab.Hive.Client.Core-3.2.csproj
@@ -95,6 +95,7 @@
     <Compile Include="ClientConsoleService\TransferObjects\ConnectionContainer.cs" />
     <Compile Include="ClientConsoleService\TransferObjects\JobStatus.cs" />
     <Compile Include="ClientConsoleService\TransferObjects\StatusCommons.cs" />
+    <Compile Include="ConfigurationManager\AppointmentContainer.cs" />
     <Compile Include="ConfigurationManager\ClientStatusInfo.cs" />
     <Compile Include="ConfigurationManager\ConfigManager.cs" />
     <Compile Include="ConfigurationManager\UptimeManager.cs" />
